--- a/employees.css
+++ b/employees.css
@@ -4,11 +4,24 @@
     background-color: lightblue;
     border: black solid 2px;
     height: fit-content;
-    width: 100%;
-    justify-content: space-around;
+    width: fit-content;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    
 }
 .card-img-top {
-    height: 400px;
+    height: 50vh;
     width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.card {
+    background-color: darkolivegreen;
+    border: black;
+    margin: 2;
+    flex-shrink: 1;
+    min-width: 300px;
+}
+.card:hover {
+    background-color: darkgreen;
 }
